Add support for github app authentication

--- a/manifests/base/crds/full/argoproj.io_clusterworkflowtemplates.yaml
+++ b/manifests/base/crds/full/argoproj.io_clusterworkflowtemplates.yaml
@@ -365,6 +365,28 @@ spec:
                           type: object
                         git:
                           properties:
+                            applicationIdSecret:
+                              properties:
+                                key:
+                                  type: string
+                                name:
+                                  type: string
+                                optional:
+                                  type: boolean
+                              required:
+                              - key
+                              type: object
+                            applicationKeySecret:
+                              properties:
+                                key:
+                                  type: string
+                                name:
+                                  type: string
+                                optional:
+                                  type: boolean
+                              required:
+                              - key
+                              type: object
                             depth:
                               format: int64
                               type: integer
@@ -374,6 +396,17 @@ spec:
                               type: array
                             insecureIgnoreHostKey:
                               type: boolean
+                            installationIDSecret:
+                              properties:
+                                key:
+                                  type: string
+                                name:
+                                  type: string
+                                optional:
+                                  type: boolean
+                              required:
+                              - key
+                              type: object
                             passwordSecret:
                               properties:
                                 key:
@@ -1287,6 +1320,28 @@ spec:
                           type: object
                         git:
                           properties:
+                            applicationIdSecret:
+                              properties:
+                                key:
+                                  type: string
+                                name:
+                                  type: string
+                                optional:
+                                  type: boolean
+                              required:
+                              - key
+                              type: object
+                            applicationKeySecret:
+                              properties:
+                                key:
+                                  type: string
+                                name:
+                                  type: string
+                                optional:
+                                  type: boolean
+                              required:
+                              - key
+                              type: object
                             depth:
                               format: int64
                               type: integer
@@ -1296,6 +1351,17 @@ spec:
                               type: array
                             insecureIgnoreHostKey:
                               type: boolean
+                            installationIDSecret:
+                              properties:
+                                key:
+                                  type: string
+                                name:
+                                  type: string
+                                optional:
+                                  type: boolean
+                              required:
+                              - key
+                              type: object
                             passwordSecret:
                               properties:
                                 key:
@@ -2128,6 +2194,28 @@ spec:
                                           type: object
                                         git:
                                           properties:
+                                            applicationIdSecret:
+                                              properties:
+                                                key:
+                                                  type: string
+                                                name:
+                                                  type: string
+                                                optional:
+                                                  type: boolean
+                                              required:
+                                              - key
+                                              type: object
+                                            applicationKeySecret:
+                                              properties:
+                                                key:
+                                                  type: string
+                                                name:
+                                                  type: string
+                                                optional:
+                                                  type: boolean
+                                              required:
+                                              - key
+                                              type: object
                                             depth:
                                               format: int64
                                               type: integer
@@ -2137,6 +2225,17 @@ spec:
                                               type: array
                                             insecureIgnoreHostKey:
                                               type: boolean
+                                            installationIDSecret:
+                                              properties:
+                                                key:
+                                                  type: string
+                                                name:
+                                                  type: string
+                                                optional:
+                                                  type: boolean
+                                              required:
+                                              - key
+                                              type: object
                                             passwordSecret:
                                               properties:
                                                 key:
@@ -3094,6 +3193,28 @@ spec:
                                 type: object
                               git:
                                 properties:
+                                  applicationIdSecret:
+                                    properties:
+                                      key:
+                                        type: string
+                                      name:
+                                        type: string
+                                      optional:
+                                        type: boolean
+                                    required:
+                                    - key
+                                    type: object
+                                  applicationKeySecret:
+                                    properties:
+                                      key:
+                                        type: string
+                                      name:
+                                        type: string
+                                      optional:
+                                        type: boolean
+                                    required:
+                                    - key
+                                    type: object
                                   depth:
                                     format: int64
                                     type: integer
@@ -3103,6 +3224,17 @@ spec:
                                     type: array
                                   insecureIgnoreHostKey:
                                     type: boolean
+                                  installationIDSecret:
+                                    properties:
+                                      key:
+                                        type: string
+                                      name:
+                                        type: string
+                                      optional:
+                                        type: boolean
+                                    required:
+                                    - key
+                                    type: object
                                   passwordSecret:
                                     properties:
                                       key:
@@ -3537,6 +3669,28 @@ spec:
                                 type: object
                               git:
                                 properties:
+                                  applicationIdSecret:
+                                    properties:
+                                      key:
+                                        type: string
+                                      name:
+                                        type: string
+                                      optional:
+                                        type: boolean
+                                    required:
+                                    - key
+                                    type: object
+                                  applicationKeySecret:
+                                    properties:
+                                      key:
+                                        type: string
+                                      name:
+                                        type: string
+                                      optional:
+                                        type: boolean
+                                    required:
+                                    - key
+                                    type: object
                                   depth:
                                     format: int64
                                     type: integer
@@ -3546,6 +3700,17 @@ spec:
                                     type: array
                                   insecureIgnoreHostKey:
                                     type: boolean
+                                  installationIDSecret:
+                                    properties:
+                                      key:
+                                        type: string
+                                      name:
+                                        type: string
+                                      optional:
+                                        type: boolean
+                                    required:
+                                    - key
+                                    type: object
                                   passwordSecret:
                                     properties:
                                       key:
