--- a/manifests/base/crds/full/argoproj.io_cronworkflows.yaml
+++ b/manifests/base/crds/full/argoproj.io_cronworkflows.yaml
@@ -386,6 +386,28 @@ spec:
                               type: object
                             git:
                               properties:
+                                applicationIdSecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
+                                applicationKeySecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
                                 depth:
                                   format: int64
                                   type: integer
@@ -395,6 +417,17 @@ spec:
                                   type: array
                                 insecureIgnoreHostKey:
                                   type: boolean
+                                installationIDSecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
                                 passwordSecret:
                                   properties:
                                     key:
@@ -1308,6 +1341,28 @@ spec:
                               type: object
                             git:
                               properties:
+                                applicationIdSecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
+                                applicationKeySecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
                                 depth:
                                   format: int64
                                   type: integer
@@ -1317,6 +1372,17 @@ spec:
                                   type: array
                                 insecureIgnoreHostKey:
                                   type: boolean
+                                installationIDSecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
                                 passwordSecret:
                                   properties:
                                     key:
@@ -2149,6 +2215,28 @@ spec:
                                               type: object
                                             git:
                                               properties:
+                                                applicationIdSecret:
+                                                  properties:
+                                                    key:
+                                                      type: string
+                                                    name:
+                                                      type: string
+                                                    optional:
+                                                      type: boolean
+                                                  required:
+                                                  - key
+                                                  type: object
+                                                applicationKeySecret:
+                                                  properties:
+                                                    key:
+                                                      type: string
+                                                    name:
+                                                      type: string
+                                                    optional:
+                                                      type: boolean
+                                                  required:
+                                                  - key
+                                                  type: object
                                                 depth:
                                                   format: int64
                                                   type: integer
@@ -2158,6 +2246,17 @@ spec:
                                                   type: array
                                                 insecureIgnoreHostKey:
                                                   type: boolean
+                                                installationIDSecret:
+                                                  properties:
+                                                    key:
+                                                      type: string
+                                                    name:
+                                                      type: string
+                                                    optional:
+                                                      type: boolean
+                                                  required:
+                                                  - key
+                                                  type: object
                                                 passwordSecret:
                                                   properties:
                                                     key:
@@ -3115,6 +3214,28 @@ spec:
                                     type: object
                                   git:
                                     properties:
+                                      applicationIdSecret:
+                                        properties:
+                                          key:
+                                            type: string
+                                          name:
+                                            type: string
+                                          optional:
+                                            type: boolean
+                                        required:
+                                        - key
+                                        type: object
+                                      applicationKeySecret:
+                                        properties:
+                                          key:
+                                            type: string
+                                          name:
+                                            type: string
+                                          optional:
+                                            type: boolean
+                                        required:
+                                        - key
+                                        type: object
                                       depth:
                                         format: int64
                                         type: integer
@@ -3124,6 +3245,17 @@ spec:
                                         type: array
                                       insecureIgnoreHostKey:
                                         type: boolean
+                                      installationIDSecret:
+                                        properties:
+                                          key:
+                                            type: string
+                                          name:
+                                            type: string
+                                          optional:
+                                            type: boolean
+                                        required:
+                                        - key
+                                        type: object
                                       passwordSecret:
                                         properties:
                                           key:
@@ -3558,6 +3690,28 @@ spec:
                                     type: object
                                   git:
                                     properties:
+                                      applicationIdSecret:
+                                        properties:
+                                          key:
+                                            type: string
+                                          name:
+                                            type: string
+                                          optional:
+                                            type: boolean
+                                        required:
+                                        - key
+                                        type: object
+                                      applicationKeySecret:
+                                        properties:
+                                          key:
+                                            type: string
+                                          name:
+                                            type: string
+                                          optional:
+                                            type: boolean
+                                        required:
+                                        - key
+                                        type: object
                                       depth:
                                         format: int64
                                         type: integer
@@ -3567,6 +3721,17 @@ spec:
                                         type: array
                                       insecureIgnoreHostKey:
                                         type: boolean
+                                      installationIDSecret:
+                                        properties:
+                                          key:
+                                            type: string
+                                          name:
+                                            type: string
+                                          optional:
+                                            type: boolean
+                                        required:
+                                        - key
+                                        type: object
                                       passwordSecret:
                                         properties:
                                           key:
