--- a/manifests/base/crds/full/argoproj.io_workfloweventbindings.yaml
+++ b/manifests/base/crds/full/argoproj.io_workfloweventbindings.yaml
@@ -108,6 +108,28 @@ spec:
                               type: object
                             git:
                               properties:
+                                applicationIdSecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
+                                applicationKeySecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
                                 depth:
                                   format: int64
                                   type: integer
@@ -117,6 +139,17 @@ spec:
                                   type: array
                                 insecureIgnoreHostKey:
                                   type: boolean
+                                installationIDSecret:
+                                  properties:
+                                    key:
+                                      type: string
+                                    name:
+                                      type: string
+                                    optional:
+                                      type: boolean
+                                  required:
+                                  - key
+                                  type: object
                                 passwordSecret:
                                   properties:
                                     key:
